spec/e2e/loops/break/invalid.lit
# error: [line 3] Syntax error at "break": Can't use 'break' outside of a loop.
fn function {
  break
}

# error: [line 7] Syntax error at "break": Can't use 'break' outside of a loop.
break

# error: [line 12] Syntax error at "break": Can't use 'break' outside of a loop.
loop {
  fn foo {
    break
  }
}
